--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,177 +1,219 @@
 {
-   "common": {
-     "loading": "Loading...",
-     "error": "Error",
-     "success": "Success",
-     "cancel": "Cancel",
-     "confirm": "Confirm",
-     "save": "Save",
-     "delete": "Delete",
-     "edit": "Edit",
-     "back": "Back",
-     "next": "Next",
-     "close": "Close",
-     "open": "Open",
-     "play": "Play",
-     "daily": "daily",
-     "online": "Online: {{count}}",
-     "balance": "Balance"
-   },
-   "header": {
-     "home": "Home",
-     "cases": "Cases",
-     "profile": "Profile",
-     "leaderboard": "Leaderboard",
-     "inventory": "Inventory",
-     "exchange": "Exchange",
-     "slots": "Slots",
-     "login": "Login",
-     "register": "Sign Up",
-     "logout": "Logout",
-     "notifications": "Notifications"
-   },
-   "auth": {
-     "login_title": "Sign In",
-     "register_title": "Create Account",
-     "username": "Username",
-     "email": "Email",
-     "password": "Password",
-     "confirm_password": "Confirm Password",
-     "remember_me": "Remember me",
-     "forgot_password": "Forgot password?",
-     "no_account": "Don't have an account?",
-     "have_account": "Already have an account?",
-     "steam_login": "Sign in with Steam",
-     "login_success": "Successfully logged in",
-     "register_success": "Registration successful",
-     "invalid_credentials": "Invalid credentials",
-     "email_verification": "Email verification"
-   },
-   "cases": {
-     "title": "Cases",
-     "premium_case": "Premium Case",
-     "daily_case": "Daily Case",
-     "bonus_case": "Bonus Case",
-     "buy_case": "Buy Case",
-     "open_case": "Open Case",
-     "case_opened": "Case Opened!",
-     "congratulations": "Congratulations!",
-     "you_won": "You won:",
-     "next_case_in": "Next case in:",
-     "available_in": "Available in:",
-     "case_preview": "Case Preview",
-     "case_contents": "Case Contents",
-     "drop_rate": "Drop Rate"
-   },
-   "profile": {
-     "title": "Profile",
-     "statistics": "Statistics",
-     "achievements": "Achievements",
-     "transactions": "Transactions",
-     "settings": "Settings",
-     "level": "Level",
-     "experience": "Experience",
-     "cases_opened": "Cases Opened",
-     "total_spent": "Total Spent",
-     "total_won": "Total Won",
-     "winnings": "Winnings",
-     "subscription": "Subscription",
-     "subscription_active": "Subscription Active",
-     "subscription_expires": "Subscription Expires",
-     "subscription_days_left": "Days left: {{days}}",
-     "steam_profile": "Steam Profile",
-     "trade_url": "Trade URL"
-   },
-   "inventory": {
-     "title": "Inventory",
-     "your_items": "Your Items",
-     "no_items": "You don't have any items yet",
-     "sell_item": "Sell Item",
-     "withdraw_item": "Withdraw Item",
-     "item_sold": "Item Sold",
-     "item_withdrawn": "Item Withdrawn",
-     "rarity": "Rarity",
-     "price": "Price",
-     "value": "Value"
-   },
-   "leaderboard": {
-     "title": "Player Rankings",
-     "top_players": "Top Players",
-     "rank": "Rank",
-     "player": "Player",
-     "total_winnings": "Total Winnings",
-     "cases_opened_count": "Cases Opened",
-     "win_rate": "Win Rate"
-   },
-   "games": {
-     "slots": "Slots",
-     "roulette": "Roulette",
-     "tic_tac_toe": "Tic Tac Toe",
-     "play_now": "Play Now",
-     "bet_amount": "Bet Amount",
-     "spin": "Spin",
-     "place_bet": "Place Bet",
-     "game_result": "Game Result",
-     "you_win": "You Win!",
-     "you_lose": "You Lose",
-     "jackpot": "Jackpot!",
-     "bonus_game": "Bonus Game",
-     "mini_game": "Mini Game"
-   },
-   "payment": {
-     "deposit": "Deposit",
-     "withdraw": "Withdraw",
-     "amount": "Amount",
-     "payment_method": "Payment Method",
-     "card": "Credit Card",
-     "crypto": "Cryptocurrency",
-     "steam_wallet": "Steam Wallet",
-     "minimum_deposit": "Minimum Deposit",
-     "maximum_deposit": "Maximum Deposit",
-     "processing": "Processing payment...",
-     "success": "Payment successful",
-     "failed": "Payment failed"
-   },
-   "notifications": {
-     "no_notifications": "No notifications",
-     "mark_all_read": "Mark all as read",
-     "case_won": "Case Win",
-     "achievement_unlocked": "Achievement Unlocked",
-     "bonus_available": "Bonus Available",
-     "subscription_expiring": "Subscription Expiring",
-     "new_items": "New Items Added"
-   },
-   "language": {
-     "title": "Language",
-     "select_language": "Select Language",
-     "russian": "Русский",
-     "english": "English",
-     "chinese": "中文",
-     "spanish": "Español",
-     "french": "Français",
-     "german": "Deutsch",
-     "japanese": "日本語",
-     "korean": "한국어"
-   },
-   "errors": {
-     "network_error": "Network Error",
-     "server_error": "Server Error",
-     "not_found": "Not Found",
-     "access_denied": "Access Denied",
-     "insufficient_balance": "Insufficient Balance",
-     "invalid_trade_url": "Invalid Trade URL",
-     "case_not_available": "Case Not Available",
-     "rate_limit": "Too Many Requests"
-   },
-   "time": {
-     "seconds": "seconds",
-     "minutes": "minutes",
-     "hours": "hours",
-     "days": "days",
-     "second": "second",
-     "minute": "minute",
-     "hour": "hour",
-     "day": "day"
-   }
- }
- 
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "cancel": "Cancel",
+    "confirm": "Confirm",
+    "save": "Save",
+    "delete": "Delete",
+    "edit": "Edit",
+    "back": "Back",
+    "next": "Next",
+    "close": "Close",
+    "open": "Open",
+    "play": "Play",
+    "daily": "daily",
+    "online": "Online: {{count}}",
+    "balance": "Balance"
+  },
+  "header": {
+    "home": "Home",
+    "cases": "Cases",
+    "profile": "Profile",
+    "leaderboard": "Leaderboard",
+    "inventory": "Inventory",
+    "exchange": "Exchange",
+    "slots": "Slots",
+    "login": "Login",
+    "register": "Sign Up",
+    "logout": "Logout",
+    "notifications": "Notifications",
+    "exchange_items": "Exchange Items",
+    "slot": "Slot",
+    "leaderboard_table": "Leaderboard",
+    "bonus": "BONUS",
+    "balance": "Balance",
+    "top_up_balance": "Top Up Balance",
+    "sign_out": "Sign Out",
+    "signing_out": "Signing out...",
+    "market": "Market",
+    "coin_flip": "Coin Flip",
+    "crash": "Crash",
+    "upgrade": "Upgrade"
+  },
+  "auth": {
+    "login_title": "Sign In",
+    "register_title": "Create Account",
+    "username": "Username",
+    "email": "Email",
+    "password": "Password",
+    "confirm_password": "Confirm Password",
+    "remember_me": "Remember me",
+    "forgot_password": "Forgot password?",
+    "no_account": "Don't have an account?",
+    "have_account": "Already have an account?",
+    "steam_login": "Sign in with Steam",
+    "login_success": "Successfully logged in",
+    "register_success": "Registration successful",
+    "invalid_credentials": "Invalid credentials",
+    "email_verification": "Email verification",
+    "welcome": "Welcome",
+    "login_subtitle": "Sign in to your ChiBox account",
+    "development_mode": "Development Mode",
+    "email_address": "Email Address",
+    "email_placeholder": "your@email.com",
+    "password_placeholder": "••••••••••",
+    "connecting": "Connecting...",
+    "login_button": "Sign In to Account",
+    "or": "or",
+    "no_account_create": "Don't have an account? Create new",
+    "autofill": "Autofill",
+    "login_error": "Login error. Check your credentials.",
+    "login_error_generic": "Login error. Please try again.",
+    "join": "Join",
+    "register_subtitle": "Create a new ChiBox account",
+    "username_placeholder": "Your username",
+    "password_min_chars": "Minimum 6 characters",
+    "bonuses": "Bonuses",
+    "cases": "Cases",
+    "prizes": "Prizes",
+    "prizes_tooltip": "Waiting for you below",
+    "creating_account": "Creating account...",
+    "logging_in": "Logging in...",
+    "create_account": "Create Account",
+    "have_account_login": "Already have an account? Sign In",
+    "passwords_not_match": "Passwords do not match",
+    "password_min_length": "Password must contain at least 6 characters",
+    "registration_error": "Registration error. Please try again.",
+    "try_suggestions": "Try:",
+    "connecting_steam": "Connecting...",
+    "steam_login_button": "Sign in with Steam"
+  },
+  "cases": {
+    "title": "Cases",
+    "premium_case": "Premium Case",
+    "daily_case": "Daily Case",
+    "bonus_case": "Bonus Case",
+    "buy_case": "Buy Case",
+    "open_case": "Open Case",
+    "case_opened": "Case Opened!",
+    "congratulations": "Congratulations!",
+    "you_won": "You won:",
+    "next_case_in": "Next case in:",
+    "available_in": "Available in:",
+    "case_preview": "Case Preview",
+    "case_contents": "Case Contents",
+    "drop_rate": "Drop Rate"
+  },
+  "profile": {
+    "title": "Profile",
+    "statistics": "Statistics",
+    "achievements": "Achievements",
+    "transactions": "Transactions",
+    "settings": "Settings",
+    "level": "Level",
+    "experience": "Experience",
+    "cases_opened": "Cases Opened",
+    "total_spent": "Total Spent",
+    "total_won": "Total Won",
+    "winnings": "Winnings",
+    "subscription": "Subscription",
+    "subscription_active": "Subscription Active",
+    "subscription_expires": "Subscription Expires",
+    "subscription_days_left": "Days left: {{days}}",
+    "steam_profile": "Steam Profile",
+    "trade_url": "Trade URL"
+  },
+  "inventory": {
+    "title": "Inventory",
+    "your_items": "Your Items",
+    "no_items": "You don't have any items yet",
+    "sell_item": "Sell Item",
+    "withdraw_item": "Withdraw Item",
+    "item_sold": "Item Sold",
+    "item_withdrawn": "Item Withdrawn",
+    "rarity": "Rarity",
+    "price": "Price",
+    "value": "Value"
+  },
+  "leaderboard": {
+    "title": "Player Rankings",
+    "top_players": "Top Players",
+    "rank": "Rank",
+    "player": "Player",
+    "total_winnings": "Total Winnings",
+    "cases_opened_count": "Cases Opened",
+    "win_rate": "Win Rate"
+  },
+  "games": {
+    "slots": "Slots",
+    "roulette": "Roulette",
+    "tic_tac_toe": "Tic Tac Toe",
+    "play_now": "Play Now",
+    "bet_amount": "Bet Amount",
+    "spin": "Spin",
+    "place_bet": "Place Bet",
+    "game_result": "Game Result",
+    "you_win": "You Win!",
+    "you_lose": "You Lose",
+    "jackpot": "Jackpot!",
+    "bonus_game": "Bonus Game",
+    "mini_game": "Mini Game"
+  },
+  "payment": {
+    "deposit": "Deposit",
+    "withdraw": "Withdraw",
+    "amount": "Amount",
+    "payment_method": "Payment Method",
+    "card": "Credit Card",
+    "crypto": "Cryptocurrency",
+    "steam_wallet": "Steam Wallet",
+    "minimum_deposit": "Minimum Deposit",
+    "maximum_deposit": "Maximum Deposit",
+    "processing": "Processing payment...",
+    "success": "Payment successful",
+    "failed": "Payment failed"
+  },
+  "notifications": {
+    "no_notifications": "No notifications",
+    "mark_all_read": "Mark all as read",
+    "case_won": "Case Win",
+    "achievement_unlocked": "Achievement Unlocked",
+    "bonus_available": "Bonus Available",
+    "subscription_expiring": "Subscription Expiring",
+    "new_items": "New Items Added"
+  },
+  "language": {
+    "title": "Language",
+    "select_language": "Select Language",
+    "russian": "Русский",
+    "english": "English",
+    "chinese": "中文",
+    "spanish": "Español",
+    "french": "Français",
+    "german": "Deutsch",
+    "japanese": "日本語",
+    "korean": "한국어"
+  },
+  "errors": {
+    "network_error": "Network Error",
+    "server_error": "Server Error",
+    "not_found": "Not Found",
+    "access_denied": "Access Denied",
+    "insufficient_balance": "Insufficient Balance",
+    "invalid_trade_url": "Invalid Trade URL",
+    "case_not_available": "Case Not Available",
+    "rate_limit": "Too Many Requests"
+  },
+  "time": {
+    "seconds": "seconds",
+    "minutes": "minutes",
+    "hours": "hours",
+    "days": "days",
+    "second": "second",
+    "minute": "minute",
+    "hour": "hour",
+    "day": "day"
+  }
+}
