--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -1,177 +1,201 @@
 {
-   "common": {
-     "loading": "Загрузка...",
-     "error": "Ошибка",
-     "success": "Успешно",
-     "cancel": "Отмена",
-     "confirm": "Подтвердить",
-     "save": "Сохранить",
-     "delete": "Удалить",
-     "edit": "Редактировать",
-     "back": "Назад",
-     "next": "Далее",
-     "close": "Закрыть",
-     "open": "Открыть",
-     "play": "Играть",
-     "daily": "ежедневно",
-     "online": "Онлайн: {{count}}",
-     "balance": "Баланс"
-   },
-   "header": {
-     "home": "Главная",
-     "cases": "Кейсы",
-     "profile": "Профиль",
-     "leaderboard": "Рейтинг",
-     "inventory": "Инвентарь",
-     "exchange": "Обмен",
-     "slots": "Слоты",
-     "login": "Войти",
-     "register": "Регистрация",
-     "logout": "Выйти",
-     "notifications": "Уведомления"
-   },
-   "auth": {
-     "login_title": "Вход в аккаунт",
-     "register_title": "Регистрация",
-     "username": "Имя пользователя",
-     "email": "Электронная почта",
-     "password": "Пароль",
-     "confirm_password": "Подтвердите пароль",
-     "remember_me": "Запомнить меня",
-     "forgot_password": "Забыли пароль?",
-     "no_account": "Нет аккаунта?",
-     "have_account": "Уже есть аккаунт?",
-     "steam_login": "Войти через Steam",
-     "login_success": "Вход выполнен успешно",
-     "register_success": "Регистрация прошла успешно",
-     "invalid_credentials": "Неверные учетные данные",
-     "email_verification": "Подтверждение email"
-   },
-   "cases": {
-     "title": "Кейсы",
-     "premium_case": "Премиум кейс",
-     "daily_case": "Ежедневный кейс",
-     "bonus_case": "Бонусный кейс",
-     "buy_case": "Купить кейс",
-     "open_case": "Открыть кейс",
-     "case_opened": "Кейс открыт!",
-     "congratulations": "Поздравляем!",
-     "you_won": "Вы выиграли:",
-     "next_case_in": "Следующий кейс через:",
-     "available_in": "Доступен через:",
-     "case_preview": "Предпросмотр кейса",
-     "case_contents": "Содержимое кейса",
-     "drop_rate": "Шанс выпадения"
-   },
-   "profile": {
-     "title": "Профиль",
-     "statistics": "Статистика",
-     "achievements": "Достижения",
-     "transactions": "Транзакции",
-     "settings": "Настройки",
-     "level": "Уровень",
-     "experience": "Опыт",
-     "cases_opened": "Кейсов открыто",
-     "total_spent": "Всего потрачено",
-     "total_won": "Всего выиграно",
-     "winnings": "Выигрыши",
-     "subscription": "Подписка",
-     "subscription_active": "Подписка активна",
-     "subscription_expires": "Подписка истекает",
-     "subscription_days_left": "Дней осталось: {{days}}",
-     "steam_profile": "Steam профиль",
-     "trade_url": "Trade URL"
-   },
-   "inventory": {
-     "title": "Инвентарь",
-     "your_items": "Ваши предметы",
-     "no_items": "У вас пока нет предметов",
-     "sell_item": "Продать предмет",
-     "withdraw_item": "Вывести предмет",
-     "item_sold": "Предмет продан",
-     "item_withdrawn": "Предмет выведен",
-     "rarity": "Редкость",
-     "price": "Цена",
-     "value": "Стоимость"
-   },
-   "leaderboard": {
-     "title": "Рейтинг игроков",
-     "top_players": "Топ игроков",
-     "rank": "Место",
-     "player": "Игрок",
-     "total_winnings": "Общий выигрыш",
-     "cases_opened_count": "Кейсов открыто",
-     "win_rate": "Процент побед"
-   },
-   "games": {
-     "slots": "Слоты",
-     "roulette": "Рулетка",
-     "tic_tac_toe": "Крестики-нолики",
-     "play_now": "Играть сейчас",
-     "bet_amount": "Размер ставки",
-     "spin": "Крутить",
-     "place_bet": "Сделать ставку",
-     "game_result": "Результат игры",
-     "you_win": "Вы выиграли!",
-     "you_lose": "Вы проиграли",
-     "jackpot": "Джекпот!",
-     "bonus_game": "Бонусная игра",
-     "mini_game": "Мини-игра"
-   },
-   "payment": {
-     "deposit": "Пополнить баланс",
-     "withdraw": "Вывести средства",
-     "amount": "Сумма",
-     "payment_method": "Способ оплаты",
-     "card": "Банковская карта",
-     "crypto": "Криптовалюта",
-     "steam_wallet": "Steam кошелек",
-     "minimum_deposit": "Минимальная сумма пополнения",
-     "maximum_deposit": "Максимальная сумма пополнения",
-     "processing": "Обработка платежа...",
-     "success": "Платеж прошел успешно",
-     "failed": "Ошибка платежа"
-   },
-   "notifications": {
-     "no_notifications": "Нет уведомлений",
-     "mark_all_read": "Отметить все как прочитанные",
-     "case_won": "Выигрыш в кейсе",
-     "achievement_unlocked": "Достижение разблокировано",
-     "bonus_available": "Доступен бонус",
-     "subscription_expiring": "Подписка истекает",
-     "new_items": "Новые предметы добавлены"
-   },
-   "language": {
-     "title": "Язык",
-     "select_language": "Выберите язык",
-     "russian": "Русский",
-     "english": "English",
-     "chinese": "中文",
-     "spanish": "Español",
-     "french": "Français",
-     "german": "Deutsch",
-     "japanese": "日本語",
-     "korean": "한국어"
-   },
-   "errors": {
-     "network_error": "Ошибка сети",
-     "server_error": "Ошибка сервера",
-     "not_found": "Не найдено",
-     "access_denied": "Доступ запрещен",
-     "insufficient_balance": "Недостаточно средств",
-     "invalid_trade_url": "Неверная ссылка для обмена",
-     "case_not_available": "Кейс недоступен",
-     "rate_limit": "Слишком много запросов"
-   },
-   "time": {
-     "seconds": "секунд",
-     "minutes": "минут",
-     "hours": "часов",
-     "days": "дней",
-     "second": "секунда",
-     "minute": "минута",
-     "hour": "час",
-     "day": "день"
-   }
- }
- 
+  "common": {
+    "loading": "Загрузка...",
+    "error": "Ошибка",
+    "success": "Успешно",
+    "cancel": "Отмена",
+    "confirm": "Подтвердить",
+    "save": "Сохранить",
+    "delete": "Удалить",
+    "edit": "Редактировать",
+    "back": "Назад",
+    "next": "Далее",
+    "close": "Закрыть",
+    "open": "Открыть",
+    "play": "Играть",
+    "daily": "ежедневно",
+    "online": "Онлайн: {{count}}",
+    "balance": "Баланс"
+  },
+  "header": {
+    "home": "Главная",
+    "cases": "Кейсы",
+    "profile": "Профиль",
+    "leaderboard": "Рейтинг",
+    "inventory": "Инвентарь",
+    "exchange": "Обмен",
+    "slots": "Слоты",
+    "login": "Войти",
+    "register": "Регистрация",
+    "logout": "Выйти",
+    "notifications": "Уведомления",
+    "exchange_items": "Обмен предметов",
+    "slot": "Слот",
+    "leaderboard_table": "Таблица лидеров",
+    "bonus": "БОНУС",
+    "balance": "Баланс",
+    "top_up_balance": "Пополнить баланс",
+    "sign_out": "Выйти",
+    "signing_out": "Выходим...",
+    "market": "Маркет",
+    "coin_flip": "Монетка",
+    "crash": "Краш",
+    "upgrade": "Апгрейд"
+  },
+  "auth": {
+    "login_title": "Вход в аккаунт",
+    "register_title": "Регистрация",
+    "username": "Имя пользователя",
+    "email": "Электронная почта",
+    "password": "Пароль",
+    "confirm_password": "Подтвердите пароль",
+    "remember_me": "Запомнить меня",
+    "forgot_password": "Забыли пароль?",
+    "no_account": "Нет аккаунта?",
+    "have_account": "Уже есть аккаунт?",
+    "steam_login": "Войти через Steam",
+    "login_success": "Вход выполнен успешно",
+    "register_success": "Регистрация прошла успешно",
+    "invalid_credentials": "Неверные учетные данные",
+    "email_verification": "Подтверждение email",
+    "welcome": "Добро пожаловать",
+    "login_subtitle": "Войдите в свою учетную запись ChiBox",
+    "development_mode": "Режим разработки",
+    "email_address": "Email адрес",
+    "email_placeholder": "your@email.com",
+    "password_placeholder": "••••••••••",
+    "connecting": "Подключение...",
+    "login_button": "Войти в аккаунт",
+    "or": "или",
+    "no_account_create": "Нет аккаунта? Создать новый",
+    "autofill": "Автозаполнение",
+    "login_error": "Ошибка входа. Проверьте данные.",
+    "login_error_generic": "Ошибка входа. Попробуйте снова."
+  },
+  "cases": {
+    "title": "Кейсы",
+    "premium_case": "Премиум кейс",
+    "daily_case": "Ежедневный кейс",
+    "bonus_case": "Бонусный кейс",
+    "buy_case": "Купить кейс",
+    "open_case": "Открыть кейс",
+    "case_opened": "Кейс открыт!",
+    "congratulations": "Поздравляем!",
+    "you_won": "Вы выиграли:",
+    "next_case_in": "Следующий кейс через:",
+    "available_in": "Доступен через:",
+    "case_preview": "Предпросмотр кейса",
+    "case_contents": "Содержимое кейса",
+    "drop_rate": "Шанс выпадения"
+  },
+  "profile": {
+    "title": "Профиль",
+    "statistics": "Статистика",
+    "achievements": "Достижения",
+    "transactions": "Транзакции",
+    "settings": "Настройки",
+    "level": "Уровень",
+    "experience": "Опыт",
+    "cases_opened": "Кейсов открыто",
+    "total_spent": "Всего потрачено",
+    "total_won": "Всего выиграно",
+    "winnings": "Выигрыши",
+    "subscription": "Подписка",
+    "subscription_active": "Подписка активна",
+    "subscription_expires": "Подписка истекает",
+    "subscription_days_left": "Дней осталось: {{days}}",
+    "steam_profile": "Steam профиль",
+    "trade_url": "Trade URL"
+  },
+  "inventory": {
+    "title": "Инвентарь",
+    "your_items": "Ваши предметы",
+    "no_items": "У вас пока нет предметов",
+    "sell_item": "Продать предмет",
+    "withdraw_item": "Вывести предмет",
+    "item_sold": "Предмет продан",
+    "item_withdrawn": "Предмет выведен",
+    "rarity": "Редкость",
+    "price": "Цена",
+    "value": "Стоимость"
+  },
+  "leaderboard": {
+    "title": "Рейтинг игроков",
+    "top_players": "Топ игроков",
+    "rank": "Место",
+    "player": "Игрок",
+    "total_winnings": "Общий выигрыш",
+    "cases_opened_count": "Кейсов открыто",
+    "win_rate": "Процент побед"
+  },
+  "games": {
+    "slots": "Слоты",
+    "roulette": "Рулетка",
+    "tic_tac_toe": "Крестики-нолики",
+    "play_now": "Играть сейчас",
+    "bet_amount": "Размер ставки",
+    "spin": "Крутить",
+    "place_bet": "Сделать ставку",
+    "game_result": "Результат игры",
+    "you_win": "Вы выиграли!",
+    "you_lose": "Вы проиграли",
+    "jackpot": "Джекпот!",
+    "bonus_game": "Бонусная игра",
+    "mini_game": "Мини-игра"
+  },
+  "payment": {
+    "deposit": "Пополнить баланс",
+    "withdraw": "Вывести средства",
+    "amount": "Сумма",
+    "payment_method": "Способ оплаты",
+    "card": "Банковская карта",
+    "crypto": "Криптовалюта",
+    "steam_wallet": "Steam кошелек",
+    "minimum_deposit": "Минимальная сумма пополнения",
+    "maximum_deposit": "Максимальная сумма пополнения",
+    "processing": "Обработка платежа...",
+    "success": "Платеж прошел успешно",
+    "failed": "Ошибка платежа"
+  },
+  "notifications": {
+    "no_notifications": "Нет уведомлений",
+    "mark_all_read": "Отметить все как прочитанные",
+    "case_won": "Выигрыш в кейсе",
+    "achievement_unlocked": "Достижение разблокировано",
+    "bonus_available": "Доступен бонус",
+    "subscription_expiring": "Подписка истекает",
+    "new_items": "Новые предметы добавлены"
+  },
+  "language": {
+    "title": "Язык",
+    "select_language": "Выберите язык",
+    "russian": "Русский",
+    "english": "English",
+    "chinese": "中文",
+    "spanish": "Español",
+    "french": "Français",
+    "german": "Deutsch",
+    "japanese": "日本語",
+    "korean": "한국어"
+  },
+  "errors": {
+    "network_error": "Ошибка сети",
+    "server_error": "Ошибка сервера",
+    "not_found": "Не найдено",
+    "access_denied": "Доступ запрещен",
+    "insufficient_balance": "Недостаточно средств",
+    "invalid_trade_url": "Неверная ссылка для обмена",
+    "case_not_available": "Кейс недоступен",
+    "rate_limit": "Слишком много запросов"
+  },
+  "time": {
+    "seconds": "секунд",
+    "minutes": "минут",
+    "hours": "часов",
+    "days": "дней",
+    "second": "секунда",
+    "minute": "минута",
+    "hour": "час",
+    "day": "день"
+  }
+}
