--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -215,5 +215,103 @@
     "minute": "minute",
     "hour": "hour",
     "day": "day"
+  },
+  "homepage": {
+    "loading_cases": "Loading cases...",
+    "cases_error": "Error loading cases",
+    "cases_temporarily_unavailable": "Cases temporarily unavailable",
+    "connection_error": "Check your internet connection",
+    "error_code": "Error code: {{code}}",
+    "cases_not_configured": "Cases not configured",
+    "data_received_empty": "Data received, but case list is empty",
+    "refresh_cases": "Refresh Cases",
+    "buy_case_error": "An error occurred while opening the case",
+    "chibox_title": "CHIBOX",
+    "chibox_description": "Making your inventory better every day. Open cases and collect rare items!",
+    "your_luck_title": "YOUR LUCK",
+    "your_luck_description": "Every opened case is a chance for a jackpot. Test your fortune today!",
+    "community_title": "COMMUNITY",
+    "community_description": "Join thousands of players. Compete on the leaderboard and win!",
+    "free_cases": "Free Cases",
+    "free_cases_description": "Daily free cases for all players",
+    "premium_cases": "Premium Cases",
+    "premium_cases_description": "Cases with exclusive rewards",
+    "status_cases": "{{status}} Cases",
+    "status_cases_description": "Exclusive cases for subscribers. {{days}} status remaining",
+    "chibox_statuses": "ChiBox Statuses",
+    "chibox_statuses_description": "Manage your privileges and get exclusive bonuses every day",
+    "win_bonus_game": "Awarded for winning the bonus game",
+    "cases_not_found": "Cases not found"
+  },
+  "modals": {
+    "shop": "Shop",
+    "top_up_balance": "Top Up Balance",
+    "subscriptions": "Subscriptions",
+    "balance_top_up": "Balance Top Up",
+    "or_enter_custom": "Or enter your own amount:",
+    "enter_amount": "Enter amount",
+    "minimum_deposit_info": "• Minimum deposit amount: 100 ₽",
+    "deposit_info": "• Funds will be credited to your balance after successful payment",
+    "cards_supported": "• Bank cards are supported",
+    "top_up_for": "Top up for {{amount}} ₽",
+    "creating_payment": "Creating payment...",
+    "select_subscription": "Select subscription",
+    "subscription_description": "Status gives a bonus to the chance of rare items dropping and daily free cases and much more",
+    "buy_subscription": "Buy Subscription",
+    "day_30": "30 days",
+    "drop_bonus": "drop bonus",
+    "case_per_day": "case per day",
+    "no_duplicates": "No duplicates",
+    "going_to_payment": "Going to payment...",
+    "going_to_subscription_payment": "Going to subscription payment...",
+    "status_purchased": "Status successfully purchased!",
+    "enter_correct_amount": "Enter correct amount for deposit",
+    "minimum_amount": "Minimum deposit amount: 100 rubles",
+    "payment_error": "Error creating payment",
+    "subscription_error": "Error purchasing subscription"
+  },
+  "roulette": {
+    "wheel_of_fortune": "🎰 Wheel of Fortune",
+    "spin_and_win": "Spin the wheel and win subscription days!",
+    "games_per_day": "30 games per day • Recharge every 48 minutes",
+    "next_game_in": "Next game in:",
+    "spin_wheel": "Spin Wheel",
+    "spinning": "Spinning...",
+    "prizes": "Prizes:",
+    "subscription_1_day": "1 day subscription",
+    "subscription_2_days": "2 days subscription",
+    "empty": "Empty",
+    "error_occurred": "An error occurred",
+    "something_went_wrong": "Something went wrong",
+    "roulette_error": "Error playing roulette:",
+    "lose_messages": [
+      "Not this time",
+      "Very sorry",
+      "You'll have more chances",
+      "Alas ;(",
+      "Almost made it!",
+      "Don't be upset",
+      "Try again tomorrow",
+      "Luck turned away",
+      "Better luck next time",
+      "Not today",
+      "Fortune is sleeping",
+      "Maybe next time?",
+      "Patience and work",
+      "Nothing terrible",
+      "Keep it up!"
+    ],
+    "win_messages": [
+      "We're all happy about this",
+      "Congratulations!",
+      "Incredible!",
+      "Well done!",
+      "Fantastic!",
+      "Great job!",
+      "Luck is on your side!",
+      "Magnificent!",
+      "Simply super!",
+      "You're a lucky one!"
+    ]
   }
 }
