--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -197,5 +197,103 @@
     "minute": "минута",
     "hour": "час",
     "day": "день"
+  },
+  "homepage": {
+    "loading_cases": "Загрузка кейсов...",
+    "cases_error": "Ошибка загрузки кейсов",
+    "cases_temporarily_unavailable": "Кейсы временно недоступны",
+    "connection_error": "Проверьте подключение к интернету",
+    "error_code": "Код ошибки: {{code}}",
+    "cases_not_configured": "Кейсы не настроены",
+    "data_received_empty": "Данные получены, но список кейсов пуст",
+    "refresh_cases": "Обновить кейсы",
+    "buy_case_error": "Произошла ошибка при открытии кейса",
+    "chibox_title": "CHIBOX",
+    "chibox_description": "Делаем твой инвентарь лучше с каждым днём. Открывай кейсы и собирай редкие предметы!",
+    "your_luck_title": "ТВОЯ УДАЧА",
+    "your_luck_description": "Каждый открытый кейс — шанс на джекпот. Проверь свою фортуну сегодня!",
+    "community_title": "СООБЩЕСТВО",
+    "community_description": "Присоединяйся к тысячам игроков. Соревнуйся в таблице лидеров и побеждай!",
+    "free_cases": "Бесплатные кейсы",
+    "free_cases_description": "Ежедневные бесплатные кейсы для всех игроков",
+    "premium_cases": "Премиум кейсы",
+    "premium_cases_description": "Кейсы с эксклюзивными наградами",
+    "status_cases": "{{status}} кейсы",
+    "status_cases_description": "Эксклюзивные кейсы для подписчиков. Осталось {{days}} статуса",
+    "chibox_statuses": "Статусы ChiBox",
+    "chibox_statuses_description": "Управляй своими привилегиями и получай эксклюзивные бонусы каждый день",
+    "win_bonus_game": "Выдается за выигрыш в бонус игре",
+    "cases_not_found": "Кейсы не найдены"
+  },
+  "modals": {
+    "shop": "Магазин",
+    "top_up_balance": "Пополнить баланс",
+    "subscriptions": "Подписки",
+    "balance_top_up": "Пополнение баланса",
+    "or_enter_custom": "Или введите свою сумму:",
+    "enter_amount": "Введите сумму",
+    "minimum_deposit_info": "• Минимальная сумма пополнения: 100 ₽",
+    "deposit_info": "• Средства поступят на баланс после успешной оплаты",
+    "cards_supported": "• Поддерживаются банковские карты",
+    "top_up_for": "Пополнить на {{amount}} ₽",
+    "creating_payment": "Создание платежа...",
+    "select_subscription": "Выберите подписку",
+    "subscription_description": "Статус дает бонус к шансу выпадения редких предметов и ежедневные бесплатные кейсы и многое другое",
+    "buy_subscription": "Купить подписку",
+    "day_30": "30 дней",
+    "drop_bonus": "к дропу",
+    "case_per_day": "кейс в день",
+    "no_duplicates": "Без дубликатов",
+    "going_to_payment": "Переходим к оплате...",
+    "going_to_subscription_payment": "Переходим к оплате подписки...",
+    "status_purchased": "Статус успешно приобретен!",
+    "enter_correct_amount": "Введите корректную сумму для пополнения",
+    "minimum_amount": "Минимальная сумма пополнения: 100 рублей",
+    "payment_error": "Ошибка при создании платежа",
+    "subscription_error": "Ошибка при покупке подписки"
+  },
+  "roulette": {
+    "wheel_of_fortune": "🎰 Колесо Фортуны",
+    "spin_and_win": "Крути колесо и выигрывай дни подписки!",
+    "games_per_day": "30 игр в день • Перезарядка каждые 48 минут",
+    "next_game_in": "Следующая игра через:",
+    "spin_wheel": "Крутить колесо",
+    "spinning": "Крутится...",
+    "prizes": "Призы:",
+    "subscription_1_day": "1 день подписки",
+    "subscription_2_days": "2 дня подписки",
+    "empty": "Пусто",
+    "error_occurred": "Произошла ошибка",
+    "something_went_wrong": "Что-то пошло не так",
+    "roulette_error": "Ошибка при игре в рулетку:",
+    "lose_messages": [
+      "Не в этот раз",
+      "Очень жаль",
+      "У вас будут ещё попытки",
+      "Увы ;(",
+      "Почти получилось!",
+      "Не расстраивайтесь",
+      "Попробуйте ещё раз, завтра",
+      "Удача отвернулась",
+      "В следующий раз повезёт",
+      "Не сегодня",
+      "Фортуна спит",
+      "Может в следующий раз?",
+      "Терпение и труд",
+      "Ничего страшного",
+      "Держите удар!"
+    ],
+    "win_messages": [
+      "Все мы рады этому",
+      "Поздравляем!",
+      "Невероятно!",
+      "Вы молодец!",
+      "Фантастика!",
+      "Отличная работа!",
+      "Удача на вашей стороне!",
+      "Великолепно!",
+      "Просто супер!",
+      "Вы везунчик!"
+    ]
   }
 }
