--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -105,7 +105,82 @@
     "subscription_expires": "Подписка истекает",
     "subscription_days_left": "Дней осталось: {{days}}",
     "steam_profile": "Steam профиль",
-    "trade_url": "Trade URL"
+    "trade_url": "Trade URL",
+    "user_not_found": "Пользователь не найден",
+    "please_login": "Пожалуйста, войдите в систему",
+    "level_progress": "Прогресс уровня",
+    "items_in_inventory": "Предметы в инвентаре",
+    "best_weapon": "Лучшее оружие",
+    "inventory_empty": "Инвентарь пуст",
+    "no_opened_cases": "Нет открытых кейсов",
+    "no_withdrawn_items": "Нет выведенных предметов",
+    "no_sold_items": "Нет проданных предметов",
+    "open_cases_hint": "Откройте кейсы, чтобы получить предметы",
+    "opened_cases_hint": "Открытые кейсы будут отображаться здесь с возможностью увидеть выпавший предмет",
+    "withdrawn_items_hint": "Предметы на выводе и выведенные в Steam будут отображаться здесь",
+    "sold_items_hint": "Проданные и обмененные предметы будут отображаться здесь",
+    "inventory": {
+      "active": "Активные",
+      "opened_cases": "Открытые кейсы",
+      "withdrawn": "Выведенные",
+      "sold": "Проданные"
+    },
+    "settings": {
+      "title": "Настройки",
+      "username": "Имя пользователя",
+      "username_placeholder": "Введите новый никнейм",
+      "username_description": "Ваше отображаемое имя на сайте (3-20 символов)",
+      "new_password": "Новый пароль",
+      "new_password_placeholder": "Введите новый пароль",
+      "password_requirements": "Минимум 8 символов, заглавные и строчные буквы, цифры, спецсимволы",
+      "confirm_password": "Подтвердите пароль",
+      "confirm_password_placeholder": "Повторите новый пароль",
+      "passwords_not_match": "Пароли не совпадают",
+      "steam_trade_url": "Steam Trade URL",
+      "trade_url_set": "Установлен",
+      "trade_url_placeholder": "https://steamcommunity.com/tradeoffer/new/?partner=...",
+      "fetch_trade_url": "Получить автоматически",
+      "fetching_trade_url": "Получение Trade URL...",
+      "email_verification": "Подтверждение Email",
+      "email_not_verified": "Ваш email не подтвержден",
+      "verify_email": "Подтвердить Email",
+      "save_changes": "Сохранить изменения",
+      "saving": "Сохранение...",
+      "fetch_trade_url_auto": "Получить Trade URL автоматически",
+      "trade_url_locked": "Trade URL установлен и заблокирован для безопасности. Для изменения обратитесь в поддержку.",
+      "trade_url_required": "Необходим для автоматической отправки предметов. Можно получить автоматически!",
+      "connect_steam_first": "Сначала подключите Steam аккаунт для автоматического получения Trade URL",
+      "steam_profile_label": "Steam Профиль",
+      "steam_connected": "Steam подключен",
+      "connect_steam": "Подключить Steam",
+      "click_to_connect": "Нажмите для привязки аккаунта",
+      "email_verification_label": "Email подтверждение",
+      "email_verified": "Email подтвержден",
+      "verify_email_button": "Подтвердить Email",
+      "click_to_send_code": "Нажмите для отправки кода",
+      "cancel": "Отмена",
+      "email_verification_modal": {
+        "title": "Подтверждение Email",
+        "send_code_to": "Отправим код подтверждения на:",
+        "code_valid_time": "Код действителен в течение 15 минут",
+        "sending_code": "Отправка кода...",
+        "send_code": "Отправить код",
+        "code_sent": "Код отправлен!",
+        "enter_code": "Введите 6-значный код из письма",
+        "verifying": "Проверка...",
+        "verify": "Подтвердить",
+        "resend": "Повторить",
+        "resending": "..."
+      },
+      "trade_url_tooltip": {
+        "title": "Как найти Trade URL:",
+        "step1": "1. Откройте Steam в браузере",
+        "step2": "2. Перейдите в Инвентарь → Предложение обменов",
+        "step3": "3. Нажмите \"Кто может отправить мне запросы на обмен?\"",
+        "step4": "4. Скопируйте URL из поля \"Trade URL\"",
+        "example": "Ссылка выглядит как: https://steamcommunity.com/tradeoffer/new/?partner=XXXXXXX&token=XXXXXXXX"
+      }
+    }
   },
   "inventory": {
     "title": "Инвентарь",
